# vitis_rtl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bash_source.sh  source.sh
byteswap/: CMakeLists.txt  Makefile
byteswap/scripts/: package_kernel.tcl  test_synth.tcl
byteswap/src/: host.cpp
byteswap/src/hdl/: byteswap.sv  byteswap_axi_read_master.sv  byteswap_axi_write_master.sv  byteswap_control_s_axi.v  byteswap_counter.sv  byteswap_swapper.v  byteswap_top.v  byteswap_vswap.sv  rtl_kernel_wizard_1.v  rtl_kernel_wizard_1_example.sv  rtl_kernel_wizard_1_example_adder.v  rtl_kernel_wizard_1_example_axi_read_master.sv
byteswap/src/hdl/byteswap/: byteswap.v  byteswap_control_s_axi.v  byteswap_int.sv  byteswap_swapper.v  byteswap_top.v  kernel.json
byteswap/src/scripts/: kernel.json  package_kernel.tcl
utils/: CMakeLists.txt  utils.mk
utils/rtl/: axi_counter.sv  axi_read_master.sv  axi_read_master_ch.sv  axi_write_master.sv  axi_write_master_ch.sv
utils/templates/: control.py  package.py  synth.py
vadd/: CMakeLists.txt  Makefile
vadd/scripts/: package_kernel.tcl  test_synth.tcl
vadd/src/: host.cpp
vadd/src/hdl/: krnl_vadd_rtl_control_s_axi.v  krnl_vadd_rtl_int.sv
vadd/src/hdl/krnl_vadd_rtl/: kernel.json  krnl_vadd_rtl.v  krnl_vadd_rtl_int.sv  krnl_vadd_rtl_top.v
vadd/src/scripts/: package_kernel.tcl  test_synth.tcl
vadd_float/: CMakeLists.txt  Makefile
vadd_float/scripts/: package_kernel.tcl  test_synth.tcl
vadd_float/src/: host.cpp
vadd_float/src/configs/: link.ini
vadd_float/src/hdl/: rtl_kernel_wizard_1.v  rtl_kernel_wizard_1_control_s_axi.v  rtl_kernel_wizard_1_example_adder.v  rtl_kernel_wizard_1_example_axi_write_master.sv  rtl_kernel_wizard_1_example_counter.sv  rtl_kernel_wizard_1_example_vadd.sv  vadd_float.sv  vadd_float_axi_write_master.sv  vadd_float_top.v
vadd_float/src/hdl/vadd_float/: kernel.json  vadd_float.v  vadd_float_adder.v  vadd_float_axi_read_master.sv  vadd_float_control.v  vadd_float_counter.sv  vadd_float_int.sv  vadd_float_top.v  vadd_float_vadd.sv
vadd_float/src/scripts/: package_kernel.tcl  test_synth.tcl
vadd_float_hls/: CMakeLists.txt  Makefile  connections.ini
vadd_float_hls/scripts/: package_kernel.tcl  package_kernel.tcl.bak  test_synth.tcl
vadd_float_hls/src/: host.cpp
vadd_float_hls/src/configs/: link.ini
vadd_float_hls/src/hdl/: vadd_float.v  vadd_float_adder.v  vadd_float_control.v
vadd_float_hls/src/hdl/vadd_float/: kernel.json  vadd_float.v
vadd_float_hls/src/hls/: adder.cpp  reader.cpp  writer.cpp
vadd_float_hls/src/scripts/: package_kernel.tcl  test_synth.tcl
vadd_float_hls_pure/: CMakeLists.txt  Makefile  connections.ini
vadd_float_hls_pure/src/: host.cpp
vadd_float_hls_pure/src/configs/: link.ini
vadd_float_hls_pure/src/hls/: adder.cpp  reader.cpp  writer.cpp
